--- a/dynatrace-operator/chart/default/tests/Common/customresource-modules/customresource-dynakube_kubemon_test.yaml
+++ b/dynatrace-operator/chart/default/tests/Common/customresource-modules/customresource-dynakube_kubemon_test.yaml
@@ -37,6 +37,23 @@ tests:
       - isNull:
           path: spec.kubernetesMonitoring.customProperties
 
+  - it: should set image if set
+    set:
+      apiUrl: test-api-url
+      apiToken: test-api-token
+      paasToken: test-paas-token
+      kubernetesMonitoring:
+        enabled: true
+        image: test-image
+    asserts:
+      - isNotNull:
+          path: spec.kubernetesMonitoring
+      - isNotNull:
+          path: spec.kubernetesMonitoring.image
+      - equal:
+          path: spec.kubernetesMonitoring.image
+          value: test-image
+
   - it: "should manipulate kubernetesMonitoring replicas if set and enabled"
     set:
       apiUrl: test-api-url
@@ -51,21 +68,6 @@ tests:
       - equal:
           path: spec.kubernetesMonitoring.replicas
           value: 3
-
-  - it: "should add kubernetesMonitoring serviceAccountName if set and enabled"
-    set:
-      apiUrl: test-api-url
-      apiToken: test-api-token
-      paasToken: test-paas-token
-      kubernetesMonitoring:
-        enabled: true
-        serviceAccountName: test-service-account
-    asserts:
-      - isNotNull:
-          path: spec.kubernetesMonitoring.serviceAccountName
-      - equal:
-          path: spec.kubernetesMonitoring.serviceAccountName
-          value: test-service-account
 
   - it: "should add kubernetesMonitoring tolerations if set and enabled"
     set:
@@ -153,22 +155,6 @@ tests:
           path: spec.kubernetesMonitoring.labels
       - equal:
           path: spec.kubernetesMonitoring.labels.test-label
-          value: test-value
-
-  - it: "should add kubernetesMonitoring args if set and enabled"
-    set:
-      apiUrl: test-api-url
-      apiToken: test-api-token
-      paasToken: test-paas-token
-      kubernetesMonitoring:
-        enabled: true
-        args:
-          test-arg: test-value
-    asserts:
-      - isNotNull:
-          path: spec.kubernetesMonitoring.args
-      - equal:
-          path: spec.kubernetesMonitoring.args.test-arg
           value: test-value
 
   - it: "should add kubernetesMonitoring env if set and enabled"
