--- a/dynatrace-operator/chart/default/tests/Openshift/oneagent/securitycontextconstraints-unprivileged_test.yaml
+++ b/dynatrace-operator/chart/default/tests/Openshift/oneagent/securitycontextconstraints-unprivileged_test.yaml
@@ -102,7 +102,7 @@ tests:
       - equal:
           path: users
           value:
-            - system:serviceaccount:dynatrace:dynatrace-dynakube-oneagent-unprivileged
+            - system:serviceaccount:NAMESPACE:dynatrace-dynakube-oneagent-unprivileged
       - equal:
           path: volumes
           value:
